<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnGuessDaily"
                style="@style/ButtonHome"
                android:text="@string/guess_daily" />

            <Button
                android:id="@+id/btnGuessRandom"
                style="@style/ButtonHome"
                android:text="@string/guess_random" />

            <Button
                android:id="@+id/btnGuessWord"
                style="@style/ButtonHome"
                android:text="@string/guess_word" />

            <Button
                android:id="@+id/btnExit"
                style="@style/ButtonHome"
                android:text="@string/exit_game" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>