<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/page_padding">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/seedBox"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_seed_number"
                    android:inputType="textPersonName"
                    android:maxLength="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="numberSigned"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wordBox"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="240dp"
                    android:visibility="gone"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_selected_word"
                    android:inputType="textPersonName"
                    android:maxLength="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wordRows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="6"
                    tools:listitem="@layout/word_row_item" />

                <Button
                    android:id="@+id/btnCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/check" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>